added bank statement